new file:   mems_spring_mass.ipynb

--- a/simulation-examples/python/mems_spring_mass.ipynb
+++ b/simulation-examples/python/mems_spring_mass.ipynb
@@ -392,7 +392,148 @@
     "    \"v_n_amplifier = np.sqrt(4 * k_B * T * R_f)\\n\",\n",
     "    \"\\n\",\n",
     "    \"V_bias = 1.0\\n\",\n",
-    "    \"sens_V_per_g = V_bias * accel.C0 / C_f / accel.d0 * accel.sens"
+    "    \"sens_V_per_g = V_bias * accel.C0 / C_f / accel.d0 * accel.sensitivity\\n\",\n",
+    "    \"a_electronic = v_n_amplifier / sens_V_per_g / 9.81 * np.ones_like(f_noise)\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Total noise\\n\",\n",
+    "    \"a_total = np.sqrt(a_thermal**2 + a_electronic**2)\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Integrate over bandwidth\\n\",\n",
+    "    \"bandwidth = 100  # Hz\\n\",\n",
+    "    \"f_bw = f_noise[f_noise <= bandwidth]\\n\",\n",
+    "    \"a_total_bw = a_total[f_noise <= bandwidth]\\n\",\n",
+    "    \"noise_rms = np.sqrt(np.trapz(a_total_bw**2, f_bw))\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Plot\\n\",\n",
+    "    \"fig, ax = plt.subplots(figsize=(12, 6))\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"ax.loglog(f_noise, a_thermal * 1e6, 'b-', linewidth=2.5, label='Thermal (Brownian) noise')\\n\",\n",
+    "    \"ax.loglog(f_noise, a_electronic * 1e6, 'r-', linewidth=2.5, label='Electronic noise')\\n\",\n",
+    "    \"ax.loglog(f_noise, a_total * 1e6, 'k-', linewidth=2.5, label='Total noise')\\n\",\n",
+    "    \"ax.axvline(bandwidth, color='g', linestyle='--', linewidth=1.5,\\n\",\n",
+    "    \"           label=f'Bandwidth: {bandwidth} Hz')\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"ax.set_xlabel('Frequency [Hz]', fontsize=12)\\n\",\n",
+    "    \"ax.set_ylabel('Noise Spectral Density [µg/√Hz]', fontsize=12)\\n\",\n",
+    "    \"ax.set_title('Noise Analysis', fontsize=14, fontweight='bold')\\n\",\n",
+    "    \"ax.legend(fontsize=10)\\n\",\n",
+    "    \"ax.grid(True, alpha=0.3, which='both')\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"plt.tight_layout()\\n\",\n",
+    "    \"plt.savefig(OUTPUT_DIR / 'noise_analysis.png', dpi=300, bbox_inches='tight')\\n\",\n",
+    "    \"plt.show()\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"print(f\\\"📊 Results:\\\")\\n\",\n",
+    "    \"print(f\\\"  • Thermal noise: {a_thermal[0]*1e6:.2f} µg/√Hz\\\")\\n\",\n",
+    "    \"print(f\\\"  • Electronic noise: {a_electronic[0]*1e6:.2f} µg/√Hz\\\")\\n\",\n",
+    "    \"print(f\\\"  • Total noise: {a_total[0]*1e6:.2f} µg/√Hz\\\")\\n\",\n",
+    "    \"print(f\\\"  • RMS noise (0-{bandwidth} Hz): {noise_rms*1e6:.2f} µg\\\")\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"markdown\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"## 8. Transient Response <a id=\\\"transient-response\\\"></a>\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"Simulate response to a **time-varying sinusoidal acceleration**.\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"code\",\n",
+    "   \"execution_count\": null,\n",
+    "   \"metadata\": {},\n",
+    "   \"outputs\": [],\n",
+    "   \"source\": [\n",
+    "    \"# Time vector\\n\",\n",
+    "    \"t_trans = np.linspace(0, 0.02, 2000)  # 20 ms\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Input: 1g sine wave at 500 Hz\\n\",\n",
+    "    \"f_input = 500  # Hz\\n\",\n",
+    "    \"a_input = 9.81 * np.sin(2 * np.pi * f_input * t_trans)\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Simulate\\n\",\n",
+    "    \"sys = accel.transfer_function()\\n\",\n",
+    "    \"t_sim, x_trans, _ = signal.lsim(sys, a_input, t_trans)\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Convert to capacitance and voltage\\n\",\n",
+    "    \"C_trans = accel.displacement_to_capacitance(x_trans)\\n\",\n",
+    "    \"V_out = accel.capacitance_to_voltage(C_trans)\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Plot\\n\",\n",
+    "    \"fig, axes = plt.subplots(3, 1, figsize=(12, 10))\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Input acceleration\\n\",\n",
+    "    \"axes[0].plot(t_sim * 1e3, a_input / 9.81, 'b-', linewidth=2)\\n\",\n",
+    "    \"axes[0].set_ylabel('Acceleration [g]', fontsize=12)\\n\",\n",
+    "    \"axes[0].set_title('Input: 1g Sine Wave at 500 Hz', fontsize=14, fontweight='bold')\\n\",\n",
+    "    \"axes[0].grid(True, alpha=0.3)\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Displacement\\n\",\n",
+    "    \"axes[1].plot(t_sim * 1e3, x_trans * 1e9, 'r-', linewidth=2)\\n\",\n",
+    "    \"axes[1].set_ylabel('Displacement [nm]', fontsize=12)\\n\",\n",
+    "    \"axes[1].set_title('Proof Mass Displacement', fontsize=14, fontweight='bold')\\n\",\n",
+    "    \"axes[1].grid(True, alpha=0.3)\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Output voltage\\n\",\n",
+    "    \"axes[2].plot(t_sim * 1e3, V_out * 1e3, 'g-', linewidth=2)\\n\",\n",
+    "    \"axes[2].set_xlabel('Time [ms]', fontsize=12)\\n\",\n",
+    "    \"axes[2].set_ylabel('Output Voltage [mV]', fontsize=12)\\n\",\n",
+    "    \"axes[2].set_title('Capacitive Readout Signal', fontsize=14, fontweight='bold')\\n\",\n",
+    "    \"axes[2].grid(True, alpha=0.3)\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"plt.tight_layout()\\n\",\n",
+    "    \"plt.savefig(OUTPUT_DIR / 'transient_response.png', dpi=300, bbox_inches='tight')\\n\",\n",
+    "    \"plt.show()\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"print(f\\\"📊 Results:\\\")\\n\",\n",
+    "    \"print(f\\\"  • Peak displacement: {np.max(np.abs(x_trans))*1e9:.2f} nm\\\")\\n\",\n",
+    "    \"print(f\\\"  • Peak output voltage: {np.max(np.abs(V_out))*1e3:.2f} mV\\\")\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"markdown\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"## 9. Design Space Exploration <a id=\\\"design-space\\\"></a>\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"Explore trade-offs between **mass**, **spring constant**, and performance metrics.\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"code\",\n",
+    "   \"execution_count\": null,\n",
+    "   \"metadata\": {},\n",
+    "   \"outputs\": [],\n",
+    "   \"source\": [\n",
+    "    \"# Parameter ranges\\n\",\n",
+    "    \"masses = np.logspace(-10, -8, 50)  # 0.1 ng to 10 ng\\n\",\n",
+    "    \"spring_constants = np.logspace(0, 2, 50)  # 1 to 100 N/m\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"M, K = np.meshgrid(masses, spring_constants)\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Calculate metrics\\n\",\n",
+    "    \"f_n_map = np.sqrt(K / M) / (2 * np.pi)  # Natural frequency [Hz]\\n\",\n",
+    "    \"sensitivity_map = M / K * 9.81 * 1e9  # Sensitivity [nm/g]\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Thermal noise (simplified)\\n\",\n",
+    "    \"b_fixed = 1e-6\\n\",\n",
+    "    \"noise_map = np.sqrt(4 * k_B * T * b_fixed / K**2) * K / M / 9.81 * 1e6  # µg/√Hz\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Plot\\n\",\n",
+    "    \"fig, axes = plt.subplots(1, 3, figsize=(16, 4.5))\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Natural frequency\\n\",\n",
+    "    \"c1 = axes[0].contourf(M * 1e9, K, f_n_map / 1e3, levels=20, cmap='viridis')\\n\",\n",
+    "    \"axes[0].set_xlabel('Mass [ng]', fontsize=11)\\n\",\n",
+    "    \"axes[0].set_ylabel('Spring Constant [N/m]', fontsize=11)\\n\",\n",
+    "    \"axes[0].set_title('Natural Frequency [kHz]', fontsize=13, fontweight='bold')\\n\",\n",
+    "    \"axes[0].set_xscale('log')\\n\",\n",
+    "    \"axes[0].set_yscale('log')\\n\",\n",
+    "    \"plt.colorbar(c1, ax=axes[0])\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Sensitivity\\n\",\n",
+    "    \"c2 = axes[1].contourf(M *"
    ]
   }
  ],
