new file:   mems_spring_mass.ipynb

--- a/simulation-examples/python/mems_spring_mass.ipynb
+++ b/simulation-examples/python/mems_spring_mass.ipynb
@@ -532,8 +532,208 @@
     "    \"axes[0].set_yscale('log')\\n\",\n",
     "    \"plt.colorbar(c1, ax=axes[0])\\n\",\n",
     "    \"\\n\",\n",
-    "    \"# Sensitivity\\n\",\n",
-    "    \"c2 = axes[1].contourf(M *"
+    "   # Continue from Design Space Exploration - Cell completion\n",
+    "\n",
+    "# Sensitivity\n",
+    "c2 = axes[1].contourf(M * 1e9, K, sensitivity_map, levels=20, cmap='plasma')\n",
+    "axes[1].set_xlabel('Mass [ng]', fontsize=11)\n",
+    "axes[1].set_ylabel('Spring Constant [N/m]', fontsize=11)\n",
+    "axes[1].set_title('Sensitivity [nm/g]', fontsize=13, fontweight='bold')\n",
+    "axes[1].set_xscale('log')\n",
+    "axes[1].set_yscale('log')\n",
+    "plt.colorbar(c2, ax=axes[1])\n",
+    "\n",
+    "# Noise floor\n",
+    "c3 = axes[2].contourf(M * 1e9, K, noise_map, levels=20, cmap='coolwarm')\n",
+    "axes[2].set_xlabel('Mass [ng]', fontsize=11)\n",
+    "axes[2].set_ylabel('Spring Constant [N/m]', fontsize=11)\n",
+    "axes[2].set_title('Noise Floor [µg/√Hz]', fontsize=13, fontweight='bold')\n",
+    "axes[2].set_xscale('log')\n",
+    "axes[2].set_yscale('log')\n",
+    "plt.colorbar(c3, ax=axes[2])\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(OUTPUT_DIR / 'design_space.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"📊 Design Trade-offs:\")\n",
+    "print(\"  • High mass → Better sensitivity, lower noise\")\n",
+    "print(\"  • High k → Higher bandwidth, lower sensitivity\")\n",
+    "print(\"  • Optimal design depends on application requirements\")\n",
+    "\n",
+    "\n",
+    "# ============================================================================\n",
+    "# Section 10: Interactive Parameter Tuning\n",
+    "# ============================================================================\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"SECTION 10: INTERACTIVE PARAMETER TUNING\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "if WIDGETS_AVAILABLE:\n",
+    "    output = Output()\n",
+    "    \n",
+    "    def update_accelerometer(mass_ng, k, zeta):\n",
+    "        \"\"\"Interactive widget callback\"\"\"\n",
+    "        with output:\n",
+    "            output.clear_output(wait=True)\n",
+    "            \n",
+    "            # Create accelerometer with new parameters\n",
+    "            m = mass_ng * 1e-9\n",
+    "            b = 2 * zeta * np.sqrt(m * k)\n",
+    "            \n",
+    "            accel_interactive = MEMSAccelerometer(m=m, k=k, b=b)\n",
+    "            \n",
+    "            # Calculate responses\n",
+    "            t, x = accel_interactive.step_response(t_max=0.01)\n",
+    "            f, H = accel_interactive.frequency_response(f_min=10, f_max=1e6)\n",
+    "            \n",
+    "            # Create figure\n",
+    "            fig, axes = plt.subplots(1, 2, figsize=(14, 5))\n",
+    "            \n",
+    "            # Step response\n",
+    "            axes[0].plot(t * 1e3, x * 1e9, 'b-', linewidth=2.5)\n",
+    "            axes[0].set_xlabel('Time [ms]', fontsize=11)\n",
+    "            axes[0].set_ylabel('Displacement [nm]', fontsize=11)\n",
+    "            axes[0].set_title('Step Response (1g)', fontsize=12, fontweight='bold')\n",
+    "            axes[0].grid(True, alpha=0.3)\n",
+    "            \n",
+    "            # Frequency response\n",
+    "            axes[1].loglog(f, H, 'r-', linewidth=2.5)\n",
+    "            axes[1].axvline(accel_interactive.f_n, color='g', linestyle='--', \n",
+    "                           label=f'fn = {accel_interactive.f_n/1e3:.1f} kHz')\n",
+    "            axes[1].set_xlabel('Frequency [Hz]', fontsize=11)\n",
+    "            axes[1].set_ylabel('Magnitude', fontsize=11)\n",
+    "            axes[1].set_title('Frequency Response', fontsize=12, fontweight='bold')\n",
+    "            axes[1].legend(fontsize=10)\n",
+    "            axes[1].grid(True, alpha=0.3, which='both')\n",
+    "            \n",
+    "            plt.tight_layout()\n",
+    "            plt.show()\n",
+    "            \n",
+    "            # Print parameters\n",
+    "            print(f\"\\n📐 Current Parameters:\")\n",
+    "            print(f\"  • Mass: {mass_ng:.2f} ng\")\n",
+    "            print(f\"  • Spring constant: {k:.2f} N/m\")\n",
+    "            print(f\"  • Damping ratio ζ: {zeta:.3f}\")\n",
+    "            print(f\"  • Natural frequency: {accel_interactive.f_n/1e3:.2f} kHz\")\n",
+    "            print(f\"  • Quality factor Q: {accel_interactive.Q:.1f}\")\n",
+    "            print(f\"  • Sensitivity: {accel_interactive.sensitivity*1e9:.2f} nm/g\")\n",
+    "    \n",
+    "    # Create interactive widgets\n",
+    "    interact(update_accelerometer,\n",
+    "             mass_ng=FloatSlider(min=0.1, max=10.0, step=0.1, value=1.0, \n",
+    "                                description='Mass [ng]'),\n",
+    "             k=FloatSlider(min=1, max=100, step=1, value=10, \n",
+    "                          description='k [N/m]'),\n",
+    "             zeta=FloatSlider(min=0.01, max=2.0, step=0.01, value=0.5, \n",
+    "                             description='ζ'))\n",
+    "    \n",
+    "    display(output)\n",
+    "    \n",
+    "else:\n",
+    "    print(\"\\n⚠️  Interactive widgets not available.\")\n",
+    "    print(\"Install ipywidgets to enable: pip install ipywidgets\")\n",
+    "    print(\"Then restart the kernel and re-run this notebook.\")\n",
+    "\n",
+    "\n",
+    "# ============================================================================\n",
+    "# Section 11: Summary and Conclusions\n",
+    "# ============================================================================\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"SECTION 11: SUMMARY AND CONCLUSIONS\")\n",
+    "print(\"=\"*60)\n",
+    "\n",
+    "print(\"\"\"\n",
+    "📋 MEMS Accelerometer Design Summary\n",
+    "=====================================\n",
+    "\n",
+    "Key Findings:\n",
+    "-------------\n",
+    "1. **Natural Frequency**: Determines bandwidth and response speed\n",
+    "   • Higher fn → Faster response, wider bandwidth\n",
+    "   • Lower fn → Better low-frequency sensitivity\n",
+    "\n",
+    "2. **Damping Ratio (ζ)**:\n",
+    "   • ζ < 0.7: Underdamped (oscillations, overshoot)\n",
+    "   • ζ ≈ 0.7: Critically damped (optimal transient response)\n",
+    "   • ζ > 1.0: Overdamped (slow, no overshoot)\n",
+    "\n",
+    "3. **Quality Factor (Q)**:\n",
+    "   • High Q: Sharp resonance, low damping\n",
+    "   • Low Q: Broad response, high damping\n",
+    "   • Trade-off: Q vs. bandwidth\n",
+    "\n",
+    "4. **Noise Sources**:\n",
+    "   • Thermal (Brownian) noise: Fundamental limit\n",
+    "   • Electronic noise: From readout circuit\n",
+    "   • Dominant noise depends on design parameters\n",
+    "\n",
+    "5. **Design Trade-offs**:\n",
+    "   • Sensitivity ↔ Bandwidth\n",
+    "   • Noise ↔ Size (mass)\n",
+    "   • Dynamic range ↔ Gap size\n",
+    "\n",
+    "Design Guidelines:\n",
+    "------------------\n",
+    "• For high-bandwidth applications (airbags): \n",
+    "  → High k, low m, ζ ≈ 0.7\n",
+    "\n",
+    "• For high-sensitivity applications (seismology):\n",
+    "  → Low k, high m, low ζ\n",
+    "\n",
+    "• For general purpose (consumer electronics):\n",
+    "  → Balanced design with ζ ≈ 0.5-0.7\n",
+    "\n",
+    "Typical MEMS Accelerometer Specs:\n",
+    "----------------------------------\n",
+    "• Mass: 0.1 - 10 ng\n",
+    "• Spring constant: 1 - 100 N/m\n",
+    "• Natural frequency: 1 - 100 kHz\n",
+    "• Sensitivity: 10 - 1000 nm/g\n",
+    "• Noise floor: 1 - 100 µg/√Hz\n",
+    "• Dynamic range: ±2g to ±200g\n",
+    "\n",
+    "Next Steps:\n",
+    "-----------\n",
+    "1. Finite Element Analysis (FEA) for detailed mechanical design\n",
+    "2. Process simulation for fabrication planning\n",
+    "3. Circuit design for capacitive readout\n",
+    "4. Packaging considerations (stress isolation)\n",
+    "5. Temperature compensation strategies\n",
+    "6. Calibration and testing procedures\n",
+    "\n",
+    "Files Generated:\n",
+    "----------------\n",
+    "\"\"\")\n",
+    "\n",
+    "# List all generated images\n",
+    "image_files = list(OUTPUT_DIR.glob('*.png'))\n",
+    "if image_files:\n",
+    "    print(\"Generated plots:\")\n",
+    "    for img_file in sorted(image_files):\n",
+    "        print(f\"  • {img_file.name}\")\n",
+    "else:\n",
+    "    print(\"  (No images found - run all cells to generate plots)\")\n",
+    "\n",
+    "print(f\"\"\"\n",
+    "Total images saved: {len(image_files)}\n",
+    "Output directory: {OUTPUT_DIR.absolute()}\n",
+    "\n",
+    "=====================================\n",
+    "✅ Analysis Complete!\n",
+    "=====================================\n",
+    "\n",
+    "Thank you for using the MEMS Spring-Mass-Damper Simulator!\n",
+    "\n",
+    "For questions or issues, please refer to:\n",
+    "• Silicon Fabrication Handbook GitHub repository\n",
+    "• MEMS design textbooks (Senturia, Maluf, etc.)\n",
+    "• Online MEMS communities and forums\n",
+    "\n",
+    "Happy designing! 🔬\n",
+    "\"\"\")"
    ]
   }
  ],
