--- a/simulation-examples/python/mems_spring_mass.ipynb
+++ b/simulation-examples/python/mems_spring_mass.ipynb
@@ -2,14 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9cc2c69c",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "'[' was never closed (915540212.py, line 495)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 495\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m\"source\": [\u001b[39m\n              ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m '[' was never closed\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "{\n",
     " \"cells\": [\n",
@@ -738,8 +743,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.13.0)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
